# asgi-benchmark

./: README.md  fastapi_example.py  pyproject.toml  quart_example.py
big-project/: benchmark.py  indexpy_example.py
simple-project/: fastapi_example.py  indexpy_example.py  quart_example.py
